crates/squealy-macros/tests/compile_fail/unsupported_default_literal.stderr
error: unsupported default literal `nonsense`
 --> tests/compile_fail/unsupported_default_literal.rs:3:10
  |
3 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
